--- a/src/components/Leaderboard/Leaderboard.module.css
+++ b/src/components/Leaderboard/Leaderboard.module.css
@@ -30,6 +30,7 @@
   padding: 12px;
   text-align: center;
   border-bottom: 1px solid #444;
+  width: calc(100% / 6);
 }
 
 .table th {
@@ -62,4 +63,4 @@
 
 .row:nth-child(3) td:first-child {
   color: #cd7f32; /* bronze */
-}                                                                                 
+}                                                                                                            
